WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180058
[Mac] Web Content process crashes when dragging a link in recovery mode
https://bugs.webkit.org/show_bug.cgi?id=180058
Summary
[Mac] Web Content process crashes when dragging a link in recovery mode
Tim Horton
Reported
2017-11-27 15:28:46 PST
Web Content process crashes when dragging a link in recovery mode
Attachments
Patch
(1.97 KB, patch)
2017-11-27 15:29 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-11-27 15:28:58 PST
<
rdar://problem/35172170
>
Tim Horton
Comment 2
2017-11-27 15:29:59 PST
Created
attachment 327698
[details]
Patch
WebKit Commit Bot
Comment 3
2017-11-27 18:10:15 PST
Comment on
attachment 327698
[details]
Patch Clearing flags on attachment: 327698 Committed
r225207
: <
https://trac.webkit.org/changeset/225207
>
WebKit Commit Bot
Comment 4
2017-11-27 18:10:17 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug