Web Content process crashes when dragging a link in recovery mode https://bugs.webkit.org/show_bug.cgi?id=180058 <rdar://problem/35172170>

Reviewed by Alexey Proskuryakov.

* platform/mac/DragImageMac.mm:
(WebCore::LinkImageLayout::LinkImageLayout):
LinkPresentation isn't available in the base system. Make it optional,
and fall back to the full URL like we do on platforms where it doesn't
exist at all.


Canonical link: https://commits.webkit.org/196068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225207 268f45cc-cd09-0410-ab3c-d52691b4dbfc